# Ingestor

./: .gitignore  LICENSE.md  README.md  api_demo.ipynb  cli.py  demo.py  example.py  metadata.json  pyproject.toml  requirements.txt  run-gui.py  setup.py  system.conf  test.py
.github/workflows/: python-publish.yml
confs/: gui.conf  system.conf
docs/: cli_usage.md  dataset_expansion.md
examples/: download_example.py
gui/: dataviewer.py  gui_utils.py  infoview.py
ingestor/: __init__.py  core_api.py  dataset_wrapper.py  utils.py
ingestor/dataset_classes/: __init__.py  wikipedia.py  wit_base.py
ingestor/datasets/: wikipedia.py
ingestor/gui/: dataviewer.py  infoview.py
pygestor/: __init__.py  core_api.py  dataset_wrapper.py  utils.py
pygestor/datasets/: hf_parquet.py  wikipedia.py  wit_base.py
pygestor/gui/: __init__.py  dataviewer.py  gui_utils.py  infoview.py
pygestor/webui/: __init__.py  dataviewer.py  infoview.py  new_menu.py  styles.py  webui_utils.py
tests/: test.py  test_core.py
